bk_ida/expected_expression/expected_expression/g3/losers_eval
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:673:67: error: use of undeclared identifier 'xmmword_4251A0'
*( __m128i *)white_back_pawn = _mm_load_si128( ( const __m128i *)&xmmword_4251A0); 
                                                                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:676:67: error: use of undeclared identifier 'xmmword_4251B0'
*( __m128i *)black_back_pawn = _mm_load_si128( ( const __m128i *)&xmmword_4251B0); 
                                                                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:678:12: error: expected expression
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:678:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:678:46: error: expected expression
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:678:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&white_back_pawn[4] = *( _OWORD *)white_back_pawn; 
                                     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:679:12: error: expected expression
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
           ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:679:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
   ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:679:46: error: expected expression
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
                                             ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/leval.c:679:38: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&black_back_pawn[4] = *( _OWORD *)black_back_pawn; 
                                     ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/losers_eval/src/obj/leval.o] Error 1
